Added classifications to /inference/status
